[package]
name = "diode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
cosmic-text = "0.10.0"
fontdue = "0.7.3"
lyon = "1.0.1"
pollster = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = "0.29.3"
